# tauri-stock-app

./: .eslintrc.cjs  .prettierrc.cjs  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: install-wix.yml  tauri-build.yml
src/: config.ts  main.css  main.tsx
src-tauri/: Cargo.toml  all_stocks.db  selection.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/command/: app_config_command.rs  common.rs  holdings_command.rs  import_command.rs  market_analysis_commands.rs  mod.rs  orders_command.rs  selection.rs  selection_command.rs  self_reflect_command.rs  stock_command.rs  stock_lines_command.rs  stock_review_command.rs  trend_lines_cmd.rs  xueqiu_command.rs
src-tauri/src/db/: app_config_db.rs  common.rs  holdings_db.rs  import_db.rs  init_db.rs  market_analysis_db.rs  mod.rs  orders_db.rs  selection.rs  selection_db.rs  self_reflect_db.rs  stock_db.rs  stock_lines_db.rs  stock_review_db.rs  trend_lines_db.rs
src-tauri/src/requests/: common.rs  get_all_stock.rs  mod.rs  xueqiu_request.rs
src-tauri/src/structs/: holdings_structs.rs  market_analysis_structs.rs  mod.rs  orders_structs.rs  selection_structs.rs  self_reflect_structs.rs  stock_lines_structs.rs  stock_review_structs.rs  stock_structs.rs  trend_lines_structs.rs  xueqiu_structs.rs
src/apis/: api.ts  pythonServer.ts
src/components/: ImportDbData.tsx  StockAnalysisContent.tsx
src/hooks/: useInterval.ts  useRealTimeData.ts
src/pages/: App.tsx  HoldingLogic.ts  Home.tsx  (+8 more)
(+40 files in other folders)
